# polo

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
cmd/polo/: Cargo.toml
cmd/polo/src/: main.rs
cmd/polod/: Cargo.toml
cmd/polod/src/: main.rs
internal/polo-server/: Cargo.toml
internal/polo-server/src/: auth.rs  config.rs  lib.rs
internal/polo-server/src/api/: backup.rs  branches.rs  entities.rs  facts.rs  health.rs  mod.rs  namespaces.rs  query.rs  stats.rs  stream.rs  tags.rs
internal/polo-server/tests/: api_tests.rs
internal/polo-store/: Cargo.toml
internal/polo-store/src/: lib.rs  memory.rs  sqlite.rs
internal/polo-store/tests/: conformance.rs
pkg/polo-client/: Cargo.toml
pkg/polo-client/src/: lib.rs
pkg/polo-core/: Cargo.toml
pkg/polo-core/src/: branch.rs  bulk.rs  clock.rs  db.rs  error.rs  fact.rs  gc.rs  lib.rs  merge.rs  namespace.rs  schema.rs  stats.rs  tx.rs
pkg/polo-core/src/pql/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  token.rs
pkg/polo-core/tests/: core_tests.rs
