[package]
name        = "polo"
description = "polo CLI client"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[[bin]]
name = "polo"
path = "src/main.rs"

[dependencies]
polo-core   = { workspace = true }
polo-client = { workspace = true }

tokio              = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
tracing-subscriber = { workspace = true }
