[package]
name        = "polod"
description = "polo server daemon"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[[bin]]
name = "polod"
path = "src/main.rs"

[dependencies]
polo-core   = { workspace = true }
polo-store  = { workspace = true }
polo-server = { workspace = true }

tokio              = { workspace = true }
axum               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
