[package]
name        = "polo-server"
description = "HTTP server for polo"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
polo-core   = { workspace = true }
polo-store  = { workspace = true }

axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tokio       = { workspace = true }
tokio-stream = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
dashmap     = { workspace = true }
