[package]
name        = "polo-store"
description = "Storage backends for polo (SQLite, in-memory)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
polo-core   = { workspace = true }
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
parking_lot = { workspace = true }
dashmap     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
