[package]
name        = "polo-client"
description = "HTTP client library for polo"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
polo-core   = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
