[package]
name        = "polo-core"
description = "Core types, ledger logic, and storage trait for polo"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
